change title back

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               class="logospacex"/>
       </div>
       <div class="flex-item titel">
-        <h1> tijd</h1>
+        <h1>Huidige tijd</h1>
       </div>
     </section>
 
