--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
       </div>
     </section>
 
+    <div class="datum flex-containerDatum">
+      <p id="titelDatum" class="flex-itemTitelDatum">Datum:</p>
+			<h2 id="date" class="flex-itemDate"></h2>
+		</div>
+
     <div id="container">
         <div class="box second clockS"></div>
         <div class="box minute clockM"></div>
@@ -75,8 +80,11 @@
     </div>
   </div>
 
-  <p></p>
+  <div class="momentVanDeDag">
+    <p id="tekst"></p>
+  </div>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
   <script src="scripts/main.js"></script>
   </body>
