--- a/index.html
+++ b/index.html
@@ -21,17 +21,30 @@
       </div>
     </section>
 
+<section id="info">
+
     <div class="datum flex-containerDatum">
       <p id="titelDatum" class="flex-itemTitelDatum">Datum:</p>
 			<h2 id="date" class="flex-itemDate"></h2>
 		</div>
-
+<!--
     <div id="container">
         <div class="box second clockS"></div>
         <div class="box minute clockM"></div>
         <div class="box hour clockH"></div>
     </div>
+-->
 
+    <div class="pictureMomentOfDay">
+      <img id="picture"></img>
+      <!--<div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
+      <!--<div>Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
+      <!--<div>Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
+    </div>
+
+    <div class="clock">
+    </div>
+<!--
     <div id="clock">
     <div id="h10" class="num">
       <div class="upper"></div>
@@ -78,11 +91,13 @@
       <div class="base lower"></div>
       <div class="lower"></div>
     </div>
-  </div>
+  </div>-->
 
   <div class="momentVanDeDag">
     <p id="tekst"></p>
   </div>
+
+</section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
