--- a/index.html
+++ b/index.html
@@ -17,83 +17,28 @@
               class="logospacex"/>
       </div>
       <div class="flex-item titel">
-        <h1>Huidige tijd</h1>
+        <h1>Huidige tijd op aarde</h1>
       </div>
     </section>
 
-<section id="info">
+<section id="info" class="flex-containerInfo">
 
-    <div class="datum flex-containerDatum">
+    <div class="datum flex-containerDatum box1 flex-itemDatum">
       <p id="titelDatum" class="flex-itemTitelDatum">Datum:</p>
 			<h2 id="date" class="flex-itemDate"></h2>
 		</div>
-<!--
-    <div id="container">
-        <div class="box second clockS"></div>
-        <div class="box minute clockM"></div>
-        <div class="box hour clockH"></div>
-    </div>
--->
 
-    <div class="pictureMomentOfDay">
+    <div class="pictureMomentOfDay box2 flex-itemPicture">
       <img id="picture"></img>
       <!--<div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
       <!--<div>Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
       <!--<div>Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
     </div>
 
-    <div class="clock">
-    </div>
-<!--
-    <div id="clock">
-    <div id="h10" class="num">
-      <div class="upper"></div>
-      <div class="base upper"></div>
-      <div class="base lower"></div>
-      <div class="lower"></div>
+    <div class="clock box3 flex-itemClock">
     </div>
 
-    <div id="h0" class="num">
-      <div class="upper"></div>
-      <div class="base upper"></div>
-      <div class="base lower"></div>
-      <div class="lower"></div>
-    </div>
-
-    <div class="colon">:</div>
-
-    <div id="m10" class="num">
-      <div class="upper"></div>
-      <div class="base upper"></div>
-      <div class="base lower"></div>
-      <div class="lower"></div>
-    </div>
-
-    <div id="m0" class="num">
-      <div class="upper"></div>
-      <div class="base upper"></div>
-      <div class="base lower"></div>
-      <div class="lower"></div>
-    </div>
-
-    <div class="colon">:</div>
-
-    <div id="s10" class="num">
-      <div class="upper"></div>
-      <div class="base upper"></div>
-      <div class="base lower"></div>
-      <div class="lower"></div>
-    </div>
-
-    <div id="s0" class="num">
-      <div class="upper"></div>
-      <div class="base upper"></div>
-      <div class="base lower"></div>
-      <div class="lower"></div>
-    </div>
-  </div>-->
-
-  <div class="momentVanDeDag">
+  <div class="momentVanDeDag box4 flex-itemText">
     <p id="tekst"></p>
   </div>
 
